<resources>
    <string name="app_name">Photo_Album</string>
    <string name = "login_text">Log in</string>
    <string name = "hint_userName">User Name</string>
    <string name = "Login_btn">Log In</string>
    <string name = "add_album_btn">add album</string>
    <string name="add_album_hint"> Album Name</string>
    <string name="check_btn"> Save </string>
    <string name="menu_edit"> Edit </string>
    <string name="delete"> Delete </string>
    <string name="location_tag">location: </string>
    <string name="person_tag">person: </string>
    <string name="save_and_exit">Save and Back to Photo List</string>
    <string name="save_and_next">Save and Add Next Tag</string>
    <string name="add_photo_btn">Add Photo</string>
    <string name="delete_photo_btn">Delete Photo</string>
    <string name="move_photo_to">Move Photo to...</string>
    <string name="edit_tag_list">Edit Tag List</string>
    <string name="delete_selecting_person_tag_btn">Delete Selecting Person Tag</string>
    <string name="delete_selecting_location_tag_btn">Delete Selecting Location Tag</string>
    <string name="search_by_tag">Search Photo By Tag</string>
    <string name="and_search_by_tag">And Search By Tag</string>
    <string name="or_search_by_tag">Or Search By Tag</string>
</resources>
