<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/person_tag"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/search_person_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location_tag"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/search_location_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/and_search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="60dp"
            android:background="#4169E1"
            android:textColor="#FFFAFA"
            android:text="@string/and_search_by_tag"
            android:clickable="true"/>

        <TextView
            android:id="@+id/or_search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="60dp"
            android:background="#4169E1"
            android:textColor="#FFFAFA"
            android:text="@string/or_search_by_tag"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>
