<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photo_for_delete"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text = "@string/person_tag"
            android:layout_gravity="bottom"/>

        <EditText
            android:id="@+id/edit_person_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="25sp"
            android:text = "@string/location_tag"/>

        <EditText
            android:id="@+id/edit_location_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/save_and_next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="#4169E1"
            android:textColor="#FFFAFA"
            android:text="@string/save_and_next"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_forever_black_24dp"
            android:layout_gravity="center_vertical"
            android:background="#00000000"/>

        <TextView
            android:layout_height="35dp"
            android:layout_width="wrap_content"
            style="@style/DeleteButton"
            android:text="@string/delete"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>
