<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="person :"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="location :"
                android:textColor="#000000"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/person_tag_list"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_weight="1"
                android:divider="#C0C0C0"
                android:dividerHeight="1dp"
                android:choiceMode="singleChoice"/>

            <ListView
                android:id="@+id/location_tag_list"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_weight="1"
                android:divider="#C0C0C0"
                android:dividerHeight="1dp"
                android:choiceMode="singleChoice"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text = "@string/person_tag"
                android:layout_gravity="bottom"/>

            <EditText
                android:id="@+id/edit_person_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="25sp"
                android:text = "@string/location_tag"/>

            <EditText
                android:id="@+id/edit_location_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/save_and_next_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:background="#4169E1"
                android:textColor="#FFFAFA"
                android:text="@string/save_and_next"
                android:clickable="true"/>

            <TextView
                android:id="@+id/delete_selecting_person_tag_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:background="#FF0000"
                android:textColor="#FFFAFA"
                android:text="@string/delete_selecting_person_tag_btn"
                android:textSize="13sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/delete_selecting_location_tag_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:background="#FF0000"
                android:textColor="#FFFAFA"
                android:text="@string/delete_selecting_location_tag_btn"
                android:textSize="13sp"
                android:clickable="true"/>

        </LinearLayout>



    </LinearLayout>
</ScrollView>